test/deca/context/invalid/3_18_method_body_bloc.deca
// Description:
//    instruction avant declaration des variables
//
// Resultats:
//    Ligne 8

class A {
   void rien(int a) {
      a = a+1;
      int b = 2;
   }
}
